--- a/index.html
+++ b/index.html
@@ -1,62 +1,97 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>تولدت مبارک ماهلین عزیزم</title>
+<title>Happy Birthday My Moon</title>
 
 <style>
 body {
   margin: 0;
-  overflow: hidden;
   font-family: sans-serif;
   background: linear-gradient(135deg, #ff758c, #ff7eb3);
   color: #fff;
-  text-align: center;
+  overflow: hidden;
 }
 
 .container {
-  padding: 60px 20px;
-  position: relative;
-  z-index: 2;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-h1 { font-size: 2.5rem; }
-p { font-size: 1.2rem; line-height: 2; margin-top: 25px; }
+/* متن وسط */
+.main-text {
+  font-size: 3.5rem;
+  font-weight: bold;
+  line-height: 1.3;
+  animation: glow 2.8s ease-in-out infinite;
+}
 
+.main-text span {
+  font-size: 2.2rem;
+  display: block;
+  margin-top: 10px;
+  letter-spacing: 3px;
+}
+
+/* دکمه */
 button {
-  margin: 20px;
-  padding: 15px 35px;
-  border-radius: 40px;
+  margin-top: 45px;
+  padding: 16px 42px;
+  font-size: 1.1rem;
   border: none;
-  font-size: 1rem;
+  border-radius: 40px;
   background: #fff;
   color: #ff4f7a;
   cursor: pointer;
+  transition: 0.3s;
 }
 
+button:hover {
+  transform: scale(1.1);
+}
+
+/* متن بعد از شروع */
 #surprise {
   display: none;
-  margin-top: 30px;
-  font-size: 1.3rem;
+  margin-top: 35px;
+  font-size: 1.2rem;
+  line-height: 2;
 }
 
-#countdown {
-  margin-top: 25px;
-  font-size: 1.4rem;
-  font-weight: bold;
+/* افکت درخشش */
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 10px #fff;
+  }
+  50% {
+    text-shadow: 0 0 35px #ffd1dc, 0 0 60px #fff;
+  }
+  100% {
+    text-shadow: 0 0 10px #fff;
+  }
 }
 
-/* ❤️ افکت قلب */
+/* قلب‌ها */
 .heart {
   position: absolute;
-  color: rgba(255,255,255,0.8);
+  color: rgba(255,255,255,0.85);
   font-size: 20px;
-  animation: floatUp 6s linear infinite;
+  animation: float 6s linear infinite;
 }
 
-@keyframes floatUp {
-  0% { transform: translateY(100vh) scale(0.8); opacity: 1; }
-  100% { transform: translateY(-10vh) scale(1.3); opacity: 0; }
+@keyframes float {
+  0% {
+    transform: translateY(100vh) scale(0.6);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-10vh) scale(1.3);
+    opacity: 0;
+  }
 }
 </style>
 </head>
@@ -64,94 +99,80 @@ button {
 <body>
 
 <div class="container">
-  <h1>🎂 تولدت مبارک ماهلین عزیزم 🎂</h1>
-
-  <p>
-    ماهلین عزیزم،  
-    تولدت فقط یه تاریخ نیست،  
-    یه نقطه‌ی روشنه  
-    تو تقویم دل من ❤️
-  </p>
-
-  <div id="countdown">در حال محاسبه تایمر...</div>
+  <div class="main-text">
+    Happy Birthday
+    <span>My Moon 🌙</span>
+  </div>
 
   <button onclick="startSurprise()">شروع سوپرایز 🎉</button>
-  <button onclick="playVoice()">یه حرف از ته دل 💖</button>
 
   <div id="surprise">
     این صدا  
-    از دلیه که همیشه با توئه 💕
+    از دلیه که  
+    همیشه با توئه 💖
   </div>
 </div>
 
-<audio id="music" src="music.mp3" loop></audio>
-<audio id="voice" src="mahlin.m4a"></audio>
+<!-- موزیک بی‌کلام -->
+<audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<!-- ویس تو -->
+<audio id="voiceMessage">
+  <source src="mahlin.m4a" type="audio/mp4">
+</audio>
+
+<!-- آهنگ باکلام -->
+<audio id="loveSong">
+  <source src="behet-ghol-midam.mp3" type="audio/mpeg">
+</audio>
 
 <script>
-// 🎵 صدا
-function startSurprise() {
-  const music = document.getElementById("music");
-  const voice = document.getElementById("voice");
-  document.getElementById("surprise").style.display = "block";
-
-  music.volume = 0.3;
-  music.play();
-
-  setTimeout(() => {
-    music.volume = 0.15;
-    voice.play();
-  }, 2000);
-
-  voice.onended = () => music.volume = 0.35;
+function fadeVolume(audio, target, duration=800) {
+  const step = (target - audio.volume) / (duration / 50);
+  const interval = setInterval(() => {
+    audio.volume = Math.max(0, Math.min(1, audio.volume + step));
+    if ((step > 0 && audio.volume >= target) || (step < 0 && audio.volume <= target)) {
+      audio.volume = target;
+      clearInterval(interval);
+    }
+  }, 50);
 }
 
-function playVoice() {
-  document.getElementById("voice").play();
-}
-
-// ❤️ قلب‌ها
-setInterval(() => {
+function createHeart() {
   const heart = document.createElement("div");
   heart.className = "heart";
   heart.innerHTML = "❤️";
   heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = (16 + Math.random()*20) + "px";
+  heart.style.fontSize = (14 + Math.random() * 20) + "px";
   document.body.appendChild(heart);
   setTimeout(() => heart.remove(), 6000);
-}, 300);
-
-// ⏳ تایمر تولد (۱۰/۱۰/۱۳۸۶ شمسی → 31 December)
-function getNextBirthday() {
-  const now = new Date();
-  let year = now.getFullYear();
-  let birthday = new Date(year, 11, 31, 0, 0, 0); // December = 11
-
-  if (birthday < now) {
-    birthday = new Date(year + 1, 11, 31, 0, 0, 0);
-  }
-  return birthday.getTime();
 }
 
-let birthdayTime = getNextBirthday();
+function startSurprise() {
+  const music = document.getElementById("bgMusic");
+  const voice = document.getElementById("voiceMessage");
+  const loveSong = document.getElementById("loveSong");
 
-setInterval(() => {
-  const now = new Date().getTime();
-  const diff = birthdayTime - now;
+  document.getElementById("surprise").style.display = "block";
 
-  if (diff <= 0) {
-    document.getElementById("countdown").innerHTML =
-      "🎉 تولدت مبارک ماهلینِ من 🎉";
-    return;
-  }
+  music.volume = 0.35;
+  music.play();
 
-  const d = Math.floor(diff / (1000*60*60*24));
-  const h = Math.floor((diff / (1000*60*60)) % 24);
-  const m = Math.floor((diff / (1000*60)) % 60);
-  const s = Math.floor((diff / 1000) % 60);
+  setInterval(createHeart, 400);
 
-  document.getElementById("countdown").innerHTML =
-    `⏳ ${d} روز ${h} ساعت ${m} دقیقه ${s} ثانیه`;
-}, 1000);
+  setTimeout(() => {
+    fadeVolume(music, 0.1, 600);
+    voice.play();
+  }, 2000);
+
+  voice.onended = () => {
+    music.pause();
+    loveSong.volume = 0.9;
+    loveSong.play();
+  };
+}
 </script>
 
 </body>
