--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@ button:hover {
 
 <!-- آهنگ باکلام -->
 <audio id="loveSong">
-  <source src="behet-ghol-midam.mp3" type="audio/mpeg">
-</audio>
+<audio src="behet-ghol-midam.mp3" autoplay></audio>
 
 <script>
 function fadeVolume(audio, target, duration=800) {
@@ -176,4 +175,5 @@ function startSurprise() {
 </script>
 
 </body>
+
 </html>
