--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ button:hover {
 
 <!-- آهنگ باکلام -->
 <audio id="loveSong">
-<audio src="behet-ghol-midam.mp3" autoplay></audio>
+  <source src="behet-ghol-midam.mp3" type="audio/mpeg">
+</audio>
 
 <script>
 function fadeVolume(audio, target, duration=800) {
@@ -175,5 +176,4 @@ function startSurprise() {
 </script>
 
 </body>
-
 </html>
