--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ button {
   <div id="countdown">در حال محاسبه تایمر...</div>
 
   <button onclick="startSurprise()">شروع سوپرایز 🎉</button>
+  <button onclick="playVoice()">یه حرف از ته دل 💖</button>
 
   <div id="surprise">
     این صدا  
@@ -154,5 +155,4 @@ setInterval(() => {
 </script>
 
 </body>
-
 </html>
